--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -1,13 +1,30 @@
-name: Workflow with Email Step
+name: CI with Caching
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
 
 jobs:
-  test:                # job name
-    runs-on: ubuntu-latest   # must be indented 4 spaces
-    steps:             # also indented 4 spaces
-      - name: 24f2007572@ds.study.iitm.ac.in
-        run: echo "Hello, world!"
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Cache dependencies
+      - name: prime-cache-56ae1fc
+        id: prime-cache-56ae1fc
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: cache-56ae1fc
+
+      - name: Show cache result
+        run: echo "Cache result: ${{ steps.prime-cache-56ae1fc.outputs.cache-hit }}"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
