--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -2,8 +2,9 @@ name: CI with Caching
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
+    branches: ["main"]
 
 jobs:
   build:
@@ -13,16 +14,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Cache dependencies
+      # Cache dependencies (prime step)
       - name: prime-cache-56ae1fc
-        id: prime-cache-56ae1fc
+        id: prime_cache_56ae1fc
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: cache-56ae1fc
 
       - name: Show cache result
-        run: echo "Cache result: ${{ steps.prime-cache-56ae1fc.outputs.cache-hit }}"
+        run: |
+          echo "Cache result: ${{ steps.prime_cache_56ae1fc.outputs.cache-hit }}"
 
       - name: Install dependencies
         run: |
