--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -14,19 +14,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Cache dependencies (prime step)
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      # Cache pip downloads
       - name: prime-cache-56ae1fc
         id: prime_cache_56ae1fc
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: cache-56ae1fc
-
-      - name: Show cache result
-        run: |
-          echo "Cache result: ${{ steps.prime_cache_56ae1fc.outputs.cache-hit }}"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          key: cache-56ae1
