--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -5,10 +5,14 @@ on:
     branches: ["main"]
 
 jobs:
+  test:
+    steps:
+      - name: 24f2007572@ds.study.iitm.ac.in
+        run: echo "Hello, world!"
+  
   build:
     runs-on: ubuntu-latest
-
-    steps:
+      
       - name: Checkout
         uses: actions/checkout@v4
 
