--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,30 +1,37 @@
-name: CI with Caching
+name: CI with Cache
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Cache dependencies
-      - name: prime-cache-56ae1fc
-        id: cache-deps
+      - name: Cache Node.js modules
+        id: cache
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
+          path: ~/.npm
           key: cache-56ae1fc
 
-      - name: Show cache result
-        run: echo "Cache result: ${{ steps.cache-deps.outputs.cache-hit }}"
+      - name: prime-cache-56ae1fc
+        run: echo "Cache status: ${{ steps.cache.outputs.cache-hit }}"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run Tests
+        run: npm test
